--- a/aura/index.html
+++ b/aura/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/aura-icon.avif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> | Frontend</title>
+    <title> AURA| Frontend</title>
   </head>
   <body>
     <div id="root"></div>
